@@ -1,8 +1,10 @@
 DIST upkern-2.0.5.tar.bz2 8776 RMD160 71c5ffdb6606908e11048c77d3a74e87f2f569fe SHA1 5f81db3799a19f27af974dab486d4272941d5730 SHA256 532b5a061553de20ceff2d80b706aa0f8d5aa2db7ba1193b0bb6766ca149a5df
 DIST upkern-2.0.6.tar.bz2 9055 RMD160 4e1fc64df059995809439ceaf52d4a67e2c212c4 SHA1 5ae10f5b6ac49cba7e67e889ecd1cda439cd79e0 SHA256 490ac5ee69d122db0499d2b04ee84620ebe28364d24025e7f9ffa84a6e9e472e
 DIST upkern-2.0.7.tar.bz2 9120 RMD160 da713a9d8ede49fafe5c53de93df420265421ed2 SHA1 6a7f468e81370d6232fcc1f77031061bc1d1d80c SHA256 eb3b39b236da1cc18a8851b049a2e54526a1ccb867fcfdd8ecc24523db8e8e34
+DIST upkern-2.0.8.tar.bz2 9132 RMD160 00a8c08e0d6e4d77cb44d12727e032c7adecfbf2 SHA1 e41d19d0a0917630e2b8700447235d77461a593f SHA256 af2c26291c65b506856d46c13f233aa7d29759e3a3663e5748e10dd1db11793b
 EBUILD upkern-2.0.5.ebuild 671 RMD160 590b864814a6e6f96190453fec2c292c5a030f8b SHA1 40d93d2e6f30c6fcaa5d4122d21fcac3c98dae93 SHA256 5d1b8a81be5505452fd51d5564b2c5805dfe9ccee8b8e4124ba7b4d7d110f94e
 EBUILD upkern-2.0.6.ebuild 711 RMD160 d8adffc4f7603f4516e8dc9bd9104b6076413f85 SHA1 b2c9d120ab9cf2fc094401dfae4a7ca68c2d9f76 SHA256 de5b3c9181a951db9be25c488fc3268935bd11cb2f82ed5368b611d751ab12bf
 EBUILD upkern-2.0.7.ebuild 711 RMD160 d8adffc4f7603f4516e8dc9bd9104b6076413f85 SHA1 b2c9d120ab9cf2fc094401dfae4a7ca68c2d9f76 SHA256 de5b3c9181a951db9be25c488fc3268935bd11cb2f82ed5368b611d751ab12bf
-MISC ChangeLog 384 RMD160 16d4ee7c7c268c42eb430c05087783ad1e04d655 SHA1 f2612e9e4cfc8ac02038554eb8e7890e428db43d SHA256 2a14efd27fa4007489f05f7101954144b0eb78f108b2c460d7941e52928bfc13
+EBUILD upkern-2.0.8.ebuild 711 RMD160 92c09f55857435429ab1ca31434b53fcd0d646d7 SHA1 7cf1ebaab10dce79715a8d21606e7d95bd337512 SHA256 86e755da6ce96c74a9f11660670efac017090edf181fe542dde7b30bdbcda2e7
+MISC ChangeLog 539 RMD160 c4b5a1ea60734d33cfd3d258bbdd06321e906b3a SHA1 5e3f132500955fbbb76f754af4f57fb558698403 SHA256 ff580b134300e5a5d066da9869d04244707b856369d30b72daf7b78a201c8d47
 MISC upkern-2.0.5.ebuild~ 664 RMD160 087e1ba6df4d0862983170b7b92de247884da5f9 SHA1 2d94bdc14f3523330021551a62dae654016fa401 SHA256 6c8f1689177fe3a8a5ddca9199380dba9330b507dc728c02241bc3b616968c82
